--- a/public/css/aviario.css
+++ b/public/css/aviario.css
@@ -7,8 +7,6 @@ html,body
     overflow-x: hidden; 
 }
 
-
-
 .exibe-noticia hr {
     border-color: #a7a7a7;
 }
@@ -122,17 +120,16 @@ html,body
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.aviario-home .busca-guia-comercial .area-procura-comercio button, .navbar .area-procura-noticia button {
+.aviario-home .busca-guia-comercial .area-procura-comercio button, .navbar .area-procura-noticia button, .guia-comercial .area-procura-comercio button{
     border: none;
     background-color: transparent;
 }
 
-.aviario-home .busca-guia-comercial .area-procura-comercio button:focus, .navbar .area-procura-noticia button:focus {
+.aviario-home .busca-guia-comercial .area-procura-comercio button:focus, .navbar .area-procura-noticia button:focus, .guia-comercial .area-procura-comercio button:focus {
     outline: none;
 }
 
-
-.aviario-home .busca-guia-comercial .procura-comercio, .navbar .procura-noticia {
+.aviario-home .busca-guia-comercial .procura-comercio, .navbar .procura-noticia, .guia-comercial .procura-comercio{
     flex: 1;
     height: 30px;
     border: none;
@@ -148,6 +145,36 @@ html,body
 
 .aviario-home .busca-guia-comercial .rodape p {
     font-size: 14px;
+}
+
+.guia-comercial .legenda-guia p {
+    font-size: 15px ;
+    font-weight: 500;
+    font-family: 'Montserrat', sans-serif;
+    color: #4d4d4d;
+}
+
+.guia-comercial .area-procura-comercio {
+    margin-top: 5px;
+    padding: 10px;
+    width: 100%;
+    height: 45px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.guia-comercial .info p {
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.destaque {
+    color: #2d9cdb;
+    font-weight: bold;
 }
 
 .aviario-home .posts-secundarios img {
@@ -201,8 +228,33 @@ html,body
     text-transform: capitalize;
 }
 
+.guia-comercial .card-body {
+    padding: 16px;
+    padding-left: 1.25rem;
+    border-bottom: 1px solid rgba(126, 120, 120, 0.125);
+}
+
 .empresas-por-categoria ul {
     padding-inline-start: 0 !important;
+}
+
+.swipeView {
+    display: grid;
+    grid-template-columns: repeat(4, 30%);
+    will-change: transform;
+    align-content: center;
+    overflow-x: auto;
+    scroll-snap-coordinate: 0 0;
+    scroll-snap-points-x: repeat(100%);
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+}
+
+.opcao {
+    scroll-snap-align: start;
+}
+
+.swipeView p {
 }
 
 footer {
@@ -248,6 +300,10 @@ footer .navegacao {
         width: 250px;
         height: 160px;
         object-fit: cover;
+    }
+
+    #card-swipe{
+        background-color: #f2f5f9 !important;
     }
    
     .painel-empresas .imagem-comercio img {
@@ -319,6 +375,10 @@ footer .navegacao {
 
     .aviario-home .busca-guia-comercial .area-procura-comercio {
         width: 382px;
+    }
+
+    .guia-comercial .area-procura-comercio {
+        margin-top: 16px;
     }
 
     .aviario-home .posts-secundarios {
@@ -402,6 +462,4 @@ footer .navegacao {
     width: 100%;
 }
 
-
-
-
+  
