--- a/public/css/painel.css
+++ b/public/css/painel.css
@@ -8,7 +8,11 @@ body{
 
 #app {
     padding: 20px 0 0;
+    min-height: 100%;
+    position: relative;
 }
+
+
 
 .padding-padrao {
     padding: 0 100px;
@@ -191,9 +195,13 @@ table {
     width: 100%;
 }
 
+.btn-full {
+    width: 100%;
+}
+
 .btn-lg {
     height: 40px;               
-    width: 150px;
+    width: 100%;
 }
 
 .btn-editar {
@@ -220,8 +228,14 @@ table {
     color: #4d4d4d;
 }
 
-.btn-novo, .btn-salvar {
+.btn-novo {
     background-color: #2EA44F;
+    color: #fff;
+    width: 150px;
+}
+
+.btn-salvar {
+    background-color: #2D9CDB;
     color: #fff;
 }
 
@@ -289,6 +303,15 @@ ul {
 
 .dados-comercio small {
     color: #06C7C4;
+}
+
+.dados-comercio h3 {
+    font-weight: 800 !important;
+}
+
+.dados-comercio h5 {
+    font-weight: 600 !important;
+    color: hsl(0, 0%, 40%);
 }
 
 .dados-comercio .telefone h5 {
@@ -420,4 +443,14 @@ ul {
   
   .hideMe{
       display: none;
+  }
+
+  .banner-topo {
+      width: 600px;
+  }
+
+
+
+  .banner-lateral {
+      width: 300px;
   }
