--- a/public/css/aviario.css
+++ b/public/css/aviario.css
@@ -508,6 +508,7 @@ footer .navegacao {
     footer .navegacao {
         margin: 15px 0;
         padding-left: 0;
+        text-align: center !important;
     }
 
     footer .dev-info p {
