--- a/public/css/aviario.css
+++ b/public/css/aviario.css
@@ -207,6 +207,14 @@ html,body
     line-height: 18px;
 }
 
+.exibe-comercio .formas-pagamento img{
+    width: 40px;
+}
+
+.exibe-comercio .redes-sociais img {
+    width: 32px;
+}
+
 .destaque {
     color: #2d9cdb;
     font-weight: bold;
@@ -326,6 +334,44 @@ footer .navegacao {
     font-size: 14px;
 }
 
+.exibe-comercio .imagem-comercio {
+    padding-right: 0 !important;
+}
+
+.exibe-comercio .imagem-comercio img{
+    width: 100% !important;
+    height: 230px;
+}
+
+.exibe-comercio .endereco p {
+    font-size: 16px;
+    line-height: 18px;
+}
+
+.exibe-comercio .titulo p {
+    font-size: 16px;
+}
+
+.exibe-comercio .contatos p {
+    line-height: 16px;
+}
+
+.exibe-comercio .formas-pagamento p, .exibe-comercio .redes-sociais p {
+    font-size: 14px;
+}
+
+.exibe-comercio .sobre p {
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.exibe-comercio .carousel-inner {
+    border-top: 5px solid #2d9cdb;
+}
+
+.exibe-comercio .card p{
+   font-size: 14px;
+}
 
 @media only screen and (min-width: 1400px) {
     .aviario-home .penultimo-post img {
@@ -355,17 +401,39 @@ footer .navegacao {
     }
 
    
-    .painel-empresas .imagem-comercio img {
+    .imagem-comercio img {
         width: 220px;
         height: 220px;
         object-fit: cover;
     }
 
-   
+    .exibe-comercio .imagem-comercio img{
+        width: 100% !important;
+        height: 250px;
+    }
+
+    .exibe-comercio .endereco p {
+        font-size: 16px;
+        line-height: 18px;
+    }
+
+    .exibe-comercio .contatos p {
+        line-height: 16px;
+    }
+
+    .exibe-comercio .formas-pagamento p {
+        font-size: 14px;
+    }
+
+    .exibe-comercio .sobre p {
+        font-size: 16px;
+        line-height: 20px;
+    }
+
 }
 
 @media only screen and (max-width: 1400px) {
-    .painel-empresas .imagem-comercio img{
+    .imagem-comercio img{
         width: 200px;
         height: 200px;
         object-fit: cover;
@@ -383,7 +451,7 @@ footer .navegacao {
 }
 
 @media only screen and (max-width:1280px) {
-    .painel-empresas .imagem-comercio img {
+    .imagem-comercio img {
         width: 190px;
         height: 190px;
         object-fit: cover;
@@ -469,9 +537,9 @@ footer .navegacao {
         object-fit: cover;
     }
 
-    .painel-empresas .imagem-comercio img {
-        width: 150px;
-        height: 150px;
+    .imagem-comercio img, .exibe-comercio .imagem-comercio img {
+        width: 150px !important;
+        height: 150px !important;
         object-fit: cover;
     }
 
@@ -491,6 +559,14 @@ footer .navegacao {
         line-height: 16px;
     }
 
+    .exibe-comercio .contatos p {
+        line-height: 14px;
+    }
+
+    .exibe-comercio .titulo p {
+        font-size: 14px;
+        line-height: 16px;
+    }
     .aviario-home .opcao label {
         font-size: 16px !important;
         line-height: 20px;
@@ -520,6 +596,12 @@ footer .navegacao {
 @media only screen and (max-width: 380px) {
     .aviario-home .busca-guia-comercial .area-procura-comercio {
         width: 328px;
+    }
+
+    .imagem-comercio img, .exibe-comercio .imagem-comercio img {
+        width: 140px !important;
+        height: 140px !important;
+        object-fit: cover;
     }
 }
 
