--- a/public/css/aviario.css
+++ b/public/css/aviario.css
@@ -7,6 +7,12 @@ html,body
     overflow-x: hidden; 
 }
 
+.aviario-noticias .swipeView .categoria-item {
+    color:#2d9cdb;
+    font-weight: 500;
+    padding-bottom: 18px;
+}
+
 .content {
     padding-bottom: 200px;
 }
@@ -356,8 +362,9 @@ footer .navegacao {
 }
 
 .exibe-comercio .imagem-comercio img{
-    width: 100% !important;
+    width: 230px !important;
     height: 230px !important;
+    object-fit: cover;
 } 
 
 .exibe-comercio .endereco p {
@@ -410,6 +417,16 @@ footer .navegacao a {
         height: 420px;
         object-fit: cover;
     }
+
+    .banners-topo img {
+        height: 93px !important;
+        object-fit: cover;
+    }
+
+    .logo img {
+        width: 100% !important;
+    }
+
     
     .aviario-home .posts-laterais img {
         width: 100%;
@@ -439,8 +456,9 @@ footer .navegacao a {
     }
 
     .exibe-comercio .imagem-comercio img{
-        width: 100% !important;
+        width: 284px !important;
         height: 284px !important;
+        object-fit: cover;
     }
 
     .exibe-comercio .endereco p {
@@ -470,9 +488,19 @@ footer .navegacao a {
         object-fit: cover;
     }
 
+    .banners-topo img {
+        height: 80px !important;
+        object-fit: cover;
+    }
+
+    .logo img {
+        width: 100% !important;
+    }
+
     .exibe-comercio .imagem-comercio img {
         width: 245px !important;
         height: 245px !important;
+        object-fit: cover;
     }
 
     .lista-noticias .imagem-noticia img {
@@ -487,9 +515,18 @@ footer .navegacao a {
 }
 
 @media only screen and (max-width:1280px) {
-    .imagem-comercio img {
+    .imagem-comercio img, .guia-comercial .imagem-comercio img {
         width: 190px !important;
         height: 190px !important;
+        object-fit: cover;
+    }
+
+    .logo img {
+        width: 100% !important;
+    }
+
+    .banners-topo img {
+        height: 76px !important;
         object-fit: cover;
     }
 
@@ -502,10 +539,22 @@ footer .navegacao a {
     .exibe-comercio .imagem-comercio img{
         width: 210px !important;
         height: 210px !important;
+        object-fit: cover;
     } 
 }
 
 @media only screen and (max-width: 414px) {
+
+    
+    .banners-topo img {
+        height: 50px !important;
+        object-fit: cover;
+    }
+
+    
+    .logo img {
+        width: 55% !important;
+    }
 
     .navbar {
         padding: 0;
@@ -578,7 +627,7 @@ footer .navegacao a {
         object-fit: cover;
     }
 
-    .imagem-comercio img, .exibe-comercio .imagem-comercio img {
+    .imagem-comercio img, .exibe-comercio .imagem-comercio img, .guia-comercial .imagem-comercio img {
         width: 150px !important;
         height: 150px !important;
         object-fit: cover;
@@ -639,7 +688,7 @@ footer .navegacao a {
         width: 328px;
     }
 
-    .imagem-comercio img, .exibe-comercio .imagem-comercio img {
+    .imagem-comercio img, .exibe-comercio .imagem-comercio img, .guia-comercial .imagem-comercio img {
         width: 140px !important;
         height: 140px !important;
         object-fit: cover;
@@ -648,6 +697,16 @@ footer .navegacao a {
     .entrar-contato {
         display: none;
     }
+
+    .banners-topo img {
+        height: 45px !important;
+        object-fit: cover;
+    }
+
+    
+    .logo img {
+        width: 55% !important;
+    }
 }
 
 @media only screen and (max-width: 320px) {
@@ -655,9 +714,20 @@ footer .navegacao a {
         width: 296px;
     }
 
-    .imagem-comercio img, .exibe-comercio .imagem-comercio img {
+    .imagem-comercio img, .exibe-comercio .imagem-comercio img, .guia-comercial .imagem-comercio img {
         width: 130px !important;
         height: 130px !important;
+        object-fit: cover;
+    }
+
+    
+    .logo img {
+        width: 55% !important;
+    }
+
+    
+    .banners-topo img {
+        height: 40px !important;
         object-fit: cover;
     }
 
